headers/core/orxResource.h



/** Resource asynchronous operation callback function
 */
typedef void (orxFASTCALL *orxRESOURCE_OP_FUNCTION)(orxHANDLE _hResource, orxS64 _s64Size, void *_pBuffer, void *_pContext);



/** Resource handlers
 */
typedef const orxSTRING (orxFASTCALL *orxRESOURCE_FUNCTION_LOCATE)(const orxSTRING _zStorage, const orxSTRING _zName, orxBOOL _bRequireExistence);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_GET_TIME)(const orxSTRING _zLocation);

typedef orxHANDLE       (orxFASTCALL *orxRESOURCE_FUNCTION_OPEN)(const orxSTRING _zLocation, orxBOOL _bEraseMode);

typedef void            (orxFASTCALL *orxRESOURCE_FUNCTION_CLOSE)(orxHANDLE _hResource);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_GET_SIZE)(orxHANDLE _hResource);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_SEEK)(orxHANDLE _hResource, orxS64 _s64Offset, orxSEEK_OFFSET_WHENCE _eWhence);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_TELL)(orxHANDLE _hResource);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_READ)(orxHANDLE _hResource, orxS64 _s64Size, void *_pBuffer);

typedef orxS64          (orxFASTCALL *orxRESOURCE_FUNCTION_WRITE)(orxHANDLE _hResource, orxS64 _s64Size, const void *_pBuffer);

typedef orxSTATUS       (orxFASTCALL *orxRESOURCE_FUNCTION_DELETE)(const orxSTRING _zLocation);


/** Resource type info
 */
typedef struct __orxRESOURCE_TYPE_INFO_t
{
  const orxSTRING               zTag;                     /**< Unique tag, mandatory */
  orxRESOURCE_FUNCTION_LOCATE   pfnLocate;                /**< Locate function, mandatory */
  orxRESOURCE_FUNCTION_GET_TIME pfnGetTime;               /**< GetTime function, optional, for hotload support */
  orxRESOURCE_FUNCTION_OPEN     pfnOpen;                  /**< Open function, mandatory */
  orxRESOURCE_FUNCTION_CLOSE    pfnClose;                 /**< Close function, mandatory */
  orxRESOURCE_FUNCTION_GET_SIZE pfnGetSize;               /**< GetSize function, mandatory */
  orxRESOURCE_FUNCTION_SEEK     pfnSeek;                  /**< Seek function, mandatory */
  orxRESOURCE_FUNCTION_TELL     pfnTell;                  /**< Tell function, mandatory */
  orxRESOURCE_FUNCTION_READ     pfnRead;                  /**< Read function, mandatory */
  orxRESOURCE_FUNCTION_WRITE    pfnWrite;                 /**< Write function, optional, for write support */
  orxRESOURCE_FUNCTION_DELETE   pfnDelete;                /**< Delete function, optional, for deletion support */

} orxRESOURCE_TYPE_INFO;


/** Reads data from a resource
 * @param[in] _hResource        Concerned resource
 * @param[in] _s64Size          Size to read (in bytes)
 * @param[out] _pBuffer         Buffer that will be filled by the read data
 * @param[in] _pfnCallback      Callback that will get called after asynchronous operation; if orxNULL, operation will be synchronous
 * @param[in] _pContext         Context that will be transmitted to the callback when called
 * @return Size of the read data, in bytes or -1 for successful asynchronous call
 */
extern orxDLLAPI orxS64 orxFASTCALL                       orxResource_Read(orxHANDLE _hResource, orxS64 _s64Size, void *_pBuffer, orxRESOURCE_OP_FUNCTION _pfnCallback, void *_pContext);


/** Writes data to a resource
 * @param[in] _hResource        Concerned resource
 * @param[in] _s64Size          Size to write (in bytes)
 * @param[out] _pBuffer         Buffer that will be written
 * @param[in] _pfnCallback      Callback that will get called after asynchronous operation; if orxNULL, operation will be synchronous
 * @param[in] _pContext         Context that will be transmitted to the callback when called
 * @return Size of the written data, in bytes, 0 if nothing could be written/no write support for this resource type or -1 for successful asynchronous call
 */
extern orxDLLAPI orxS64 orxFASTCALL                       orxResource_Write(orxHANDLE _hResource, orxS64 _s64Size, const void *_pBuffer, orxRESOURCE_OP_FUNCTION _pfnCallback, void *_pContext);


/** Deletes a resource, given its location
 * @param[in] _zLocation        Location of the resource to delete
 * @return orxSTATUS_SUCCESS upon success, orxSTATUS_FAILURE otherwise
 */
extern orxDLLAPI orxSTATUS orxFASTCALL                    orxResource_Delete(const orxSTRING _zLocation);



/** Gets pending operation count for a given resource
 * @param[in] _hResource        Concerned resource
 * @return Number of pending asynchronous operations for that resource
 */
extern orxDLLAPI orxU32 orxFASTCALL                       orxResource_GetPendingOpCount(const orxHANDLE _hResource);


/** Gets total pending operation count
 * @return Number of total pending asynchronous operations
 */
extern orxDLLAPI orxU32 orxFASTCALL                       orxResource_GetTotalPendingOpCount();



/** Registers a new resource type
 * @param[in] _pstInfo          Info describing the new resource type and how to handle it
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL                    orxResource_RegisterType(const orxRESOURCE_TYPE_INFO *_pstInfo);


/** Gets number of registered resource types
 * @return Number of registered resource types
 */
extern orxDLLAPI orxU32 orxFASTCALL                       orxResource_GetTypeCount();


/** Gets registered type info at given index
 * @param[in] _u32Index         Index of storage
 * @return Type tag string if index is valid, orxNULL otherwise
 */
extern orxDLLAPI const orxSTRING orxFASTCALL              orxResource_GetTypeTag(orxU32 _u32Index);



/** Clears cache
 * @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
 */
extern orxDLLAPI orxSTATUS orxFASTCALL                    orxResource_ClearCache();