headers/base/orxType.h


  typedef void *                  orxHANDLE;

  typedef unsigned  int           orxU32;

  typedef unsigned  long          orxU32;

    typedef signed    long long   orxS64;

    typedef signed    long long   orxS64;

    typedef signed    __int64     orxS64;

    typedef void *                orxHANDLE;

    typedef unsigned  int         orxU32;


    typedef signed    long long   orxS64;

    typedef unsigned  long        orxU32;


    typedef signed    long long   orxS64;

static const orxU32               orxU32_UNDEFINED      = (orxU32)(-1);

static const orxHANDLE            orxHANDLE_UNDEFINED   = (orxHANDLE)(-1);


/* *** Status defines *** */
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          /**< Failure status, the operation has failed */
  orxSTATUS_SUCCESS,              /**< Success status, the operation has worked has expected */

  orxSTATUS_NUMBER,               /**< Sentinel : Number of status */

  orxSTATUS_NONE = orxENUM_NONE   /**< Invalid status */

} orxSTATUS;