src/norx/resource.nim


proc orxResource_Read*(hResource: orxHANDLE; s64Size: orxS64; pBuffer: pointer;
                      pfnCallback: orxRESOURCE_OP_FUNCTION; pContext: pointer): orxS64 {.
    cdecl, importc: "orxResource_Read", dynlib: libORX.}
## * Writes data to a resource
##  @param[in] _hResource        Concerned resource
##  @param[in] _s64Size          Size to write (in bytes)
##  @param[out] _pBuffer         Buffer that will be written
##  @param[in] _pfnCallback      Callback that will get called after asynchronous operation; if nil, operation will be synchronous
##  @param[in] _pContext         Context that will be transmitted to the callback when called
##  @return Size of the written data, in bytes, 0 if nothing could be written/no write support for this resource type or -1 for successful asynchronous call
##

proc orxResource_Write*(hResource: orxHANDLE; s64Size: orxS64; pBuffer: pointer;
                       pfnCallback: orxRESOURCE_OP_FUNCTION; pContext: pointer): orxS64 {.
    cdecl, importc: "orxResource_Write", dynlib: libORX.}
## * Deletes a resource, given its location
##  @param[in] _zLocation        Location of the resource to delete
##  @return orxSTATUS_SUCCESS upon success, orxSTATUS_FAILURE otherwise
##

proc orxResource_Delete*(zLocation: cstring): orxSTATUS {.cdecl,
    importc: "orxResource_Delete", dynlib: libORX.}
## * Gets pending operation count for a given resource
##  @param[in] _hResource        Concerned resource
##  @return Number of pending asynchronous operations for that resource
##

proc orxResource_GetPendingOpCount*(hResource: orxHANDLE): orxU32 {.cdecl,
    importc: "orxResource_GetPendingOpCount", dynlib: libORX.}
## * Gets total pending operation count
##  @return Number of total pending asynchronous operations
##

proc orxResource_GetTotalPendingOpCount*(): orxU32 {.cdecl,
    importc: "orxResource_GetTotalPendingOpCount", dynlib: libORX.}
## * Registers a new resource type
##  @param[in] _pstInfo          Info describing the new resource type and how to handle it
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxResource_RegisterType*(pstInfo: ptr orxRESOURCE_TYPE_INFO): orxSTATUS {.
    cdecl, importc: "orxResource_RegisterType", dynlib: libORX.}
## * Gets number of registered resource types
##  @return Number of registered resource types
##

proc orxResource_GetTypeCount*(): orxU32 {.cdecl,
                                        importc: "orxResource_GetTypeCount",
                                        dynlib: libORX.}
## * Gets registered type info at given index
##  @param[in] _u32Index         Index of storage
##  @return Type tag string if index is valid, nil otherwise
##

proc orxResource_GetTypeTag*(u32Index: orxU32): cstring {.cdecl,
    importc: "orxResource_GetTypeTag", dynlib: libORX.}
## * Clears cache
##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE
##

proc orxResource_ClearCache*(): orxSTATUS {.cdecl,
    importc: "orxResource_ClearCache", dynlib: libORX.}
## * @}
